test/errors/scan_decimal_int.py
01

00004

0_00_2

123__456

123_

0_

1234a

1234z

1234A

1234Z

1234Gfjfj

0Z
