test/errors/scan_decimal_int.py.expected
test/errors/scan_decimal_int.py:1 error: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
test/errors/scan_decimal_int.py:3 error: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
test/errors/scan_decimal_int.py:5 error: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
test/errors/scan_decimal_int.py:7 error: decimal literal cannot have consecutive `_`
test/errors/scan_decimal_int.py:9 error: decimal literal cannot end with `_`
test/errors/scan_decimal_int.py:11 error: decimal literal cannot end with `_`
test/errors/scan_decimal_int.py:13 error: invalid digit for decimal literal: `a`
test/errors/scan_decimal_int.py:15 error: invalid digit for decimal literal: `z`
test/errors/scan_decimal_int.py:17 error: invalid digit for decimal literal: `A`
test/errors/scan_decimal_int.py:19 error: invalid digit for decimal literal: `Z`
test/errors/scan_decimal_int.py:21 error: invalid digit for decimal literal: `G`
test/errors/scan_decimal_int.py:23 error: invalid digit for decimal literal: `Z`
